
   * produces Interface objects that can be inspected with the Python
     'pydoc' and 'help()' tools

   * supports and implements the PEP 246 'adapt()' protocol

   * transparently supports transitive adaptation - i.e. if adapter AB
     adapts from A to B, and adapter BC adapts from B to C, then an adapt(x,C)
     where 'x' is an 'A', will be implemented as BC(AB(x)).

   * can interoperate with other interface packages, including Zope's, but
     does not require them

   * works with module inheritance (for everything but moduleProvides())

   * lets you use Interfaces as abstract base classes (i.e., you can
     inherit from an interface and turn it into an implementation, and
     you can define default attribute values or method implementations in
     your interfaces

   * Lets you mix interface declarations from any number of frameworks and
     any number of interface types, in a single 'implements()' or
     'classProvides()'

   * uses adaptation as the fundamental approach to dealing with interfaces,
     and avoids the use of 'isImplementedBy()'.  In the *rare* case that you
     need to introspect rather than adapt, you can always call adapt() and
     check the result.

   Most of these features are unavailable in 'zope.interface', and some have
   been declared by the Zope Pope to be unacceptable or undesirable features
   for Zope interfaces.  (Others may be available in some form in future
   versions of Zope X3.)  So, we no longer require or distribute
   'zope.interface'.

 - The signatures of the 'getObjectInstance()', 'getStateToBind()', and
   'getURLContext()' methods in the 'peak.naming' package have changed, to
   place the context or parent component as the first, non-optional argument.
   (If you don't know what these methods are for, you don't need to do anything
   about this, as they are part of the naming package's extensibility
   framework.)

 - 'EigenRegistry' and 'PropertyMap' no longer attempt to figure out whether